--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.2",
     "mongoose": "^5.10.0",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
